--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "seed": "node src/database/seed.js",
-    "init-db": "node src/database/init.js"
+    "init-db": "node src/database/init.js",
+    "test-db": "node src/utils/testConnection.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.3",
     "express-ejs-layouts": "^2.5.1",
+    "method-override": "^3.0.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
